# directTranscription

./: CGLms.cpp  CGLms.h  CMakeLists.txt  LGLms.cpp  LGLms.h  LLG.cpp  LLG.h  Plot_opencv.cpp  Plot_opencv.h  Plotter.cpp  Plotter.h  Plotter_dt.cpp  Plotter_dt.h  RK4multipleshooting.cpp  RK4multipleshooting.h  magit.org  main.cpp  main_patch.cpp  main_prev.cpp  main_rh.cpp  main_rh_standard.cpp  main_tan_o_2.cpp  main_tano.cpp
helper/: CGL_Dmatrix.m  CGL_nodes.m  CGL_weights.m  lgl_Dmatrix.m  lgl_nodes.m  lgl_weights.m
